--- a/Problemset.ipynb
+++ b/Problemset.ipynb
@@ -12,7 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
+   "id": "e1343b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "fafe9d18",
    "metadata": {},
    "outputs": [
@@ -37,9 +52,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
     "\n",
     "# Daten einlesen\n",
     "data = pd.read_parquet('data/spx_ivs_2023-02.parquet')\n",
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "1db408a8",
    "metadata": {},
    "outputs": [
@@ -176,10 +188,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "# Ergebnisse laden (wenn du aus vorherigem Code kommst, einfach weitermachen)\n",
     "# results_df = ...\n",
     "\n",
@@ -234,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "c571509a",
    "metadata": {},
    "outputs": [
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "70510be5",
    "metadata": {},
    "outputs": [
