--- a/Problemset_updated.ipynb
+++ b/Problemset_updated.ipynb
@@ -33,16 +33,106 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Daten einlesen\n",
-    "data = pd.read_parquet('data/spx_ivs_2023-02.parquet')\n",
-    "data['date'] = pd.to_datetime(data['loctimestamp'], unit='ms').dt.date\n",
+    "# read data\n",
     "\n",
-    "# Risikofreier Zinssatz je Tag einlesen\n",
+    "data = pd.read_parquet('data/spx_ivs_2023-02.parquet')\n",
+    "data['date'] = pd.to_datetime(data['loctimestamp'], unit='ms').dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c64e62f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# get risk free rate\n",
+    "\n",
     "rf_df = pd.read_csv('data/riskfree_30d_2023-02.csv', parse_dates=['date'])\n",
     "rf_df['date'] = rf_df['date'].dt.date\n",
-    "rf_dict = rf_df.set_index('date')['yld_pct_annual'].to_dict()\n",
+    "rf_dict = rf_df.set_index('date')['yld_pct_annual'].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5def89d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# price of volatility contract function for call\n",
+    "def V_C(K, S_t, P):\n",
+    "    return ((2 * (1 - np.log(K / S_t))) / K**2) * P\n",
     "\n",
-    "tau = 30 / 365  # 30 Tage in Jahren\n",
+    "# price of volatility contract function for put\n",
+    "def V_P(K, S_t, P):\n",
+    "    return ((2 * (1 - np.log(S_t / K))) / K**2) * P\n",
+    "\n",
+    "# price of volatility contract function\n",
+    "def V(integrand_calls_v, Kc, integrand_puts_v, Kp):\n",
+    "    return np.trapz(integrand_calls_v, Kc) + np.trapz(integrand_puts_v, Kp)\n",
+    "\n",
+    "# price of the cubic conctract for call\n",
+    "def W_C(K, S_t, P):\n",
+    "    return ((6 * np.log(K / S_t) - 3 * np.log(K / S_t)**2) / K**2) * P \n",
+    "\n",
+    "# price of the cubic conctract for put\n",
+    "def W_P(K, S_t, P):\n",
+    "    return -((6 * np.log(S_t / K) - 3 * np.log(S_t / K)**2) / K**2) * P\n",
+    "\n",
+    "# price of the cubic contract\n",
+    "def W(integrand_calls_w, Kc, integrand_puts_w, Kp):\n",
+    "    return np.trapz(integrand_calls_w, Kc) + np.trapz(integrand_puts_w, Kp)\n",
+    "\n",
+    "# price of the quartic contract for call\n",
+    "def X_C(K, S_t, P):\n",
+    "    return ((12 * np.log(K / S_t)**2 - 4 * np.log(K / S_t)**3) / K**2) * P\n",
+    "\n",
+    "# price of the quartic contract for put\n",
+    "def X_P(K, S_t, P):\n",
+    "    return ((12 * np.log(S_t / K)**2 - 4 * np.log(S_t / K)**3) / K**2) * P\n",
+    "\n",
+    "# price of the quartic contract\n",
+    "def X(integrand_calls_x, Kc, integrand_puts_x, Kp):\n",
+    "    return np.trapz(integrand_calls_x, Kc) + np.trapz(integrand_puts_x, Kp)\n",
+    "\n",
+    "# mu\n",
+    "def mu(r, tau, V, W, X):\n",
+    "    return (np.exp(r * tau) - 1\n",
+    "            - (np.exp(r * tau) / 2) * V\n",
+    "            - (np.exp(r * tau) / 6) * W\n",
+    "            - (np.exp(r * tau) / 24) * X)\n",
+    "\n",
+    "def skew(r, tau, V, W, X):\n",
+    "    numerator_skew = (np.exp(r * tau) * W\n",
+    "                      - 3 * mu * np.exp(r * tau) * V\n",
+    "                      + 2 * mu**3)\n",
+    "    denominator_skew = (np.exp(r * tau) * V - mu**2)**(3/2)\n",
+    "    return numerator_skew / denominator_skew\n",
+    "\n",
+    "def kurt(r, tau, V, W, X):\n",
+    "    numerator_kurt = (np.exp(r * tau) * X\n",
+    "                      - 4 * mu * np.exp(r * tau) * W\n",
+    "                      + 6 * mu**2 * np.exp(r * tau) * V\n",
+    "                      - 3 * mu**4)\n",
+    "    denominator_kurt = (np.exp(r * tau) * V - mu**2)**2\n",
+    "    return numerator_kurt / denominator_kurt\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6d74f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# todo: warum berechnen wir sigma?????\n",
+    "\n",
+    "tau = 30 / 365 \n",
     "results = []\n",
     "\n",
     "for day in pd.date_range(start='2023-02-01', end='2023-02-28'):\n",
@@ -51,18 +141,18 @@
     "    if data_day.empty:\n",
     "        continue\n",
     "    \n",
-    "    # Tagesabhängigen risikofreien Zinssatz holen (in Dezimal, z.B. 0.0468)\n",
+    "    # get daily riskfree rate\n",
     "    r = rf_dict.get(date, 3) / 100  # Falls kein Wert, Default 3%\n",
     "    \n",
     "    S_t = data_day['underlyingprice'].iloc[0]\n",
     "    options = data_day[data_day['implPrice'].notnull()]\n",
     "    \n",
-    "    integrand_calls_var = []\n",
-    "    integrand_puts_var = []\n",
-    "    integrand_calls_skew = []\n",
-    "    integrand_puts_skew = []\n",
-    "    integrand_calls_kurt = []\n",
-    "    integrand_puts_kurt = []\n",
+    "    integrand_calls_v = []\n",
+    "    integrand_puts_v = []\n",
+    "    integrand_calls_w = []\n",
+    "    integrand_puts_w = []\n",
+    "    integrand_calls_x = []\n",
+    "    integrand_puts_x = []\n",
     "    \n",
     "    Kc = []\n",
     "    Kp = []\n",
@@ -74,66 +164,37 @@
     "            continue\n",
     "\n",
     "        if row['putcall'] == 'C' and K >= S_t:\n",
-    "            log_term = np.log(K / S_t)\n",
     "\n",
-    "            w_var = (2 * (1 - log_term)) / K**2\n",
-    "            w_skew = (6 * log_term - 3 * log_term**2) / K**2\n",
-    "            w_kurt = (12 * log_term**2 - 4 * log_term**3) / K**2\n",
-    "\n",
-    "            integrand_calls_var.append(w_var * price)\n",
-    "            integrand_calls_skew.append(w_skew * price)\n",
-    "            integrand_calls_kurt.append(w_kurt * price)\n",
+    "            integrand_calls_v.append(V_C(K, S_t, price))\n",
+    "            integrand_calls_w.append(W_C(K, S_t, price))\n",
+    "            integrand_calls_x.append(X_C(K, S_t, price))\n",
     "            Kc.append(K)\n",
     "\n",
     "        elif row['putcall'] == 'P' and K < S_t:\n",
-    "            log_term = np.log(S_t / K)\n",
     "\n",
-    "            w_var = (2 * (1 + log_term)) / K**2\n",
-    "            w_skew = -(6 * log_term + 3 * log_term**2) / K**2\n",
-    "            w_kurt = (12 * log_term**2 + 4 * log_term**3) / K**2\n",
-    "\n",
-    "            integrand_puts_var.append(w_var * price)\n",
-    "            integrand_puts_skew.append(w_skew * price)\n",
-    "            integrand_puts_kurt.append(w_kurt * price)\n",
+    "            integrand_puts_v.append(V_P(K, S_t, price))\n",
+    "            integrand_puts_w.append(W_P(K, S_t, price))\n",
+    "            integrand_puts_x.append(X_P(K, S_t, price))\n",
     "            Kp.append(K)\n",
     "\n",
     "    if len(Kc) < 2 or len(Kp) < 2:\n",
     "        continue\n",
     "\n",
-    "    # Integration mit Trapezregel\n",
-    "    var_calls = np.trapz(integrand_calls_var, Kc)\n",
-    "    var_puts = np.trapz(integrand_puts_var, Kp)\n",
-    "    V = (var_calls + var_puts)\n",
-    "    sigma = np.sqrt(V)\n",
+    "    # numerical integration\n",
+    "    V = V(integrand_calls_v, Kc, integrand_puts_v, Kp)\n",
     "\n",
-    "    skew_calls = np.trapz(integrand_calls_skew, Kc)\n",
-    "    skew_puts = np.trapz(integrand_puts_skew, Kp)\n",
-    "    W = (skew_calls + skew_puts)  \n",
-    "\n",
-    "    kurt_calls = np.trapz(integrand_calls_kurt, Kc)\n",
-    "    kurt_puts = np.trapz(integrand_puts_kurt, Kp)\n",
-    "    X = (kurt_calls + kurt_puts)  \n",
+    "    W = W(integrand_calls_w, Kc, integrand_puts_w, Kp)\n",
     "    \n",
-    "    # Erwartungswert mu(t, tau)\n",
-    "    mu = (np.exp(r * tau) - 1\n",
-    "          - (np.exp(r * tau) / 2) * V\n",
-    "          - (np.exp(r * tau) / 6) * W\n",
-    "          - (np.exp(r * tau) / 24) * X)\n",
+    "    X = X(integrand_calls_x, Kc, integrand_puts_x, Kp)\n",
+    "    \n",
+    "    # mu(t, tau)\n",
+    "    mu = mu(r, tau, V, W, X)\n",
     "\n",
-    "    # Erwartete Skewness SKEW(t, tau)\n",
-    "    numerator_skew = (np.exp(r * tau) * W\n",
-    "                      - 3 * mu * np.exp(r * tau) * V\n",
-    "                      + 2 * mu**3)\n",
-    "    denominator_skew = (np.exp(r * tau) * V - mu**2)**(3/2)\n",
-    "    expected_skew = numerator_skew / denominator_skew if denominator_skew != 0 else np.nan\n",
+    "    # SKEW(t, tau)\n",
+    "    expected_skew = skew(r, tau, V, W, X)\n",
     "\n",
-    "    # Erwartete Kurtosis (Excess Kurtosis), analog berechnet\n",
-    "    numerator_kurt = (np.exp(r * tau) * X\n",
-    "                      - 4 * mu * np.exp(r * tau) * W\n",
-    "                      + 6 * mu**2 * np.exp(r * tau) * V\n",
-    "                      - 3 * mu**4)\n",
-    "    denominator_kurt = (np.exp(r * tau) * V - mu**2)**2\n",
-    "    expected_kurt = numerator_kurt / denominator_kurt if denominator_kurt != 0 else np.nan\n",
+    "    # KURT(t, tau)\n",
+    "    expected_kurt = kurt(r, tau, V, W, X)\n",
     "\n",
     "    results.append({\n",
     "        'date': date,\n",
