--- a/Problemset_updated.ipynb
+++ b/Problemset_updated.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "id": "e1343b30",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "id": "fafe9d18",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "id": "9c64e62f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 108,
    "id": "c5def89d",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 109,
    "id": "e6d74f8a",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 110,
    "id": "1db408a8",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "c571509a",
    "metadata": {},
    "outputs": [
@@ -321,10 +321,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from datetime import datetime\n",
-    "\n",
     "# Daten einlesen\n",
     "data = pd.read_parquet('data/sp500_merged_ivs_2023-02.parquet')\n",
     "data['date'] = pd.to_datetime(data['loctimestamp'], unit='ms').dt.date\n",
@@ -458,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 112,
    "id": "70510be5",
    "metadata": {},
    "outputs": [
@@ -518,6 +514,110 @@
     "\n",
     "print(results_df)\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84678923",
+   "metadata": {},
+   "source": [
+    "Task 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "3c752bb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    symbol        mu       var      skew       kurt\n",
+      "0        A -0.000250  0.008555 -1.365560   9.845308\n",
+      "1      AAL -0.002877  0.014021 -1.203333   9.885834\n",
+      "2      AAP -0.003721  0.015962 -1.332313   7.551877\n",
+      "3     AAPL  0.000282  0.007438 -1.503226  12.696312\n",
+      "4     ABBV  0.001871  0.004128 -1.610086  12.875985\n",
+      "..     ...       ...       ...       ...        ...\n",
+      "496    ZBH  0.001625  0.004759 -1.815903  13.761260\n",
+      "497   ZBRA -0.003231  0.014731 -0.897543   7.487412\n",
+      "498   ZION  0.000159  0.007629 -1.098515   7.359480\n",
+      "499    ZTS -0.000219  0.008489 -1.525898  13.650729\n",
+      "500    SPX  0.002624  0.002600 -2.319006  19.995911\n",
+      "\n",
+      "[501 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# compare values to SPX Index\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "\n",
+    "for symbol in symbols:\n",
+    "        data_symbol = results_df[results_df['symbol'] == symbol]\n",
+    "        \n",
+    "        firm_mu = data_symbol['mu'].mean()\n",
+    "        firm_var = data_symbol['V'].mean()\n",
+    "        firm_skew = data_symbol['skewness'].mean()\n",
+    "        firm_kurt = data_symbol['kurtosis'].mean()\n",
+    "\n",
+    "        results.append({\n",
+    "                'symbol': symbol,\n",
+    "                'mu': firm_mu,\n",
+    "                'var': firm_var,\n",
+    "                'skew': firm_skew,\n",
+    "                'kurt': firm_kurt\n",
+    "        })\n",
+    "\n",
+    "results.append({\n",
+    "        'symbol': 'SPX',\n",
+    "        'mu': index_results_df['mu'].mean(),\n",
+    "        'var': index_results_df['V'].mean(),\n",
+    "        'skew': index_results_df['skewness'].mean(),\n",
+    "        'kurt': index_results_df['kurtosis'].mean()\n",
+    "})\n",
+    "\n",
+    "\n",
+    "comparison_df = pd.DataFrame(results)\n",
+    "\n",
+    "print(comparison_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a5feea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.028\n"
+     ]
+    }
+   ],
+   "source": [
+    "# share of individual skew below index skew\n",
+    "count = 0\n",
+    "\n",
+    "spx_skew = comparison_df.loc[comparison_df['symbol'] == 'SPX', 'skew'].iloc[0]\n",
+    "\n",
+    "for index, row in comparison_df.iterrows():\n",
+    "    symbol = row['symbol']\n",
+    "    if symbol == 'SPX':\n",
+    "        continue\n",
+    "\n",
+    "    if row['skew'] < spx_skew:\n",
+    "        count += 1\n",
+    "\n",
+    "share = count / 500\n",
+    "\n",
+    "print(share)\n"
    ]
   }
  ],
