--- a/Problemset.ipynb
+++ b/Problemset.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "c5def89d",
    "metadata": {},
    "outputs": [],
@@ -103,6 +103,7 @@
     "            - (np.exp(r * tau) / 6) * W\n",
     "            - (np.exp(r * tau) / 24) * X)\n",
     "\n",
+    "#skewness\n",
     "def skew(r, tau, V, W, X, mu):\n",
     "    numerator_skew = (np.exp(r * tau) * W\n",
     "                      - 3 * mu * np.exp(r * tau) * V\n",
@@ -110,20 +111,19 @@
     "    denominator_skew = (np.exp(r * tau) * V - mu**2)**(3/2)\n",
     "    return numerator_skew / denominator_skew\n",
     "\n",
+    "#kurtosis\n",
     "def kurt(r, tau, V, W, X, mu):\n",
     "    numerator_kurt = (np.exp(r * tau) * X\n",
     "                      - 4 * mu * np.exp(r * tau) * W\n",
     "                      + 6 * mu**2 * np.exp(r * tau) * V\n",
     "                      - 3 * mu**4)\n",
     "    denominator_kurt = (np.exp(r * tau) * V - mu**2)**2\n",
-    "    return numerator_kurt / denominator_kurt\n",
-    "\n",
-    "\n"
+    "    return numerator_kurt / denominator_kurt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "e6d74f8a",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "1db408a8",
    "metadata": {},
    "outputs": [
@@ -276,6 +276,7 @@
     }
    ],
    "source": [
+    "# plot the first four moments\n",
     "plt.figure(figsize=(14, 6))\n",
     "\n",
     "plt.subplot(2, 2, 1)\n",
@@ -341,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "id": "56582e5b",
    "metadata": {},
    "outputs": [
@@ -478,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "dbf7ecb6",
    "metadata": {},
    "outputs": [
@@ -494,9 +495,8 @@
     }
    ],
    "source": [
-    "# plot 'A' four moments\n",
+    "# plot 'A' first four moments\n",
     "a_data = results_df[results_df['symbol'] == 'A']\n",
-    "\n",
     "\n",
     "index_results_df['date'] = pd.to_datetime(index_results_df['date'])\n",
     "\n",
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "70510be5",
    "metadata": {},
    "outputs": [
@@ -579,8 +579,10 @@
     }
    ],
    "source": [
+    "# load beta data\n",
     "beta_data = pd.read_parquet('data/sp500_merged_implBeta_2023-02.parquet')\n",
     "\n",
+    "# get market skewness\n",
     "market_skew = results_df['skewness'].median()\n",
     "\n",
     "for index, row in results_df.iterrows():\n",
@@ -612,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "3c752bb7",
    "metadata": {},
    "outputs": [
@@ -638,7 +640,7 @@
     }
    ],
    "source": [
-    "# compare values to SPX Index\n",
+    "# compare average values from Index to Individual Stocks\n",
     "\n",
     "results = []\n",
     "\n",
@@ -675,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "id": "7a5feea7",
    "metadata": {},
    "outputs": [
@@ -683,8 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.038\n",
-      "-1.2250931348833065\n"
+      "0.038\n"
      ]
     }
    ],
@@ -704,10 +705,7 @@
     "\n",
     "share = count / 500\n",
     "\n",
-    "print(share)\n",
-    "\n",
-    "\n",
-    "print(comparison_df['skew'].mean())\n"
+    "print(share)\n"
    ]
   }
  ],
