--- a/Problemset.ipynb
+++ b/Problemset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "id": "e1343b30",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "fafe9d18",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "id": "9c64e62f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "c5def89d",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "e6d74f8a",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "1db408a8",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "id": "c571509a",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "id": "f2861a50",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "id": "56582e5b",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l7/q149vsq90bb6jd1b96qw2qyc0000gn/T/ipykernel_36505/1957963885.py:48: RuntimeWarning: invalid value encountered in scalar power\n",
+      "/var/folders/l7/q149vsq90bb6jd1b96qw2qyc0000gn/T/ipykernel_39372/3901417287.py:49: RuntimeWarning: invalid value encountered in scalar power\n",
       "  denominator_skew = (np.exp(r * tau) * V - mu**2)**(3/2)\n"
      ]
     },
@@ -479,7 +479,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
+   "id": "22ca6757",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   symbol        date  underlying_price         V         W         X  \\\n",
+      "0       A  2023-02-01           155.960  0.006726 -0.000440  0.000402   \n",
+      "1       A  2023-02-02           154.995  0.007007 -0.000513  0.000411   \n",
+      "2       A  2023-02-03           153.980  0.006760 -0.000552  0.000414   \n",
+      "3       A  2023-02-06           151.880  0.007204 -0.000563  0.000447   \n",
+      "4       A  2023-02-07           154.285  0.007088 -0.000876  0.000548   \n",
+      "5       A  2023-02-08           154.910  0.007149 -0.000931  0.000564   \n",
+      "6       A  2023-02-09           152.075  0.007775 -0.000836  0.000571   \n",
+      "7       A  2023-02-10           152.255  0.008314 -0.000368  0.000865   \n",
+      "8       A  2023-02-13           154.415  0.007872 -0.001545  0.001154   \n",
+      "9       A  2023-02-14           153.175  0.007977 -0.001011  0.000748   \n",
+      "10      A  2023-02-15           151.660  0.007587 -0.000951  0.000618   \n",
+      "11      A  2023-02-16           148.765  0.007504 -0.000975  0.000605   \n",
+      "12      A  2023-02-17           147.935  0.007261 -0.001143  0.000777   \n",
+      "13      A  2023-02-21           143.235  0.009008 -0.002463  0.002106   \n",
+      "14      A  2023-02-22           141.800  0.007956 -0.000634  0.000422   \n",
+      "15      A  2023-02-23           142.920  0.007062 -0.000584  0.000361   \n",
+      "16      A  2023-02-24           140.860  0.008299 -0.000322  0.000695   \n",
+      "17      A  2023-02-27           142.120  0.007340 -0.000540  0.000418   \n",
+      "18      A  2023-02-28           142.010  0.007346 -0.000587  0.000398   \n",
+      "\n",
+      "          mu  skewness   kurtosis  \n",
+      "0   0.000535 -0.816370   8.863003  \n",
+      "1   0.000433 -0.887775   8.353624  \n",
+      "2   0.000494 -1.008837   9.050865  \n",
+      "3   0.000318 -0.929900   8.590341  \n",
+      "4   0.000424 -1.480791  10.893063  \n",
+      "5   0.000423 -1.552700  11.023504  \n",
+      "6   0.000108 -1.220865   9.408140  \n",
+      "7  -0.000277 -0.475156  12.467504  \n",
+      "8   0.000175 -2.213495  18.573479  \n",
+      "9  -0.000012 -1.415623  11.706822  \n",
+      "10  0.000194 -1.442952  10.717170  \n",
+      "11  0.000295 -1.506741  10.718874  \n",
+      "12  0.000371 -1.856511  14.717757  \n",
+      "13 -0.000329 -2.865079  25.823446  \n",
+      "14 -0.000057 -0.889163   6.636746  \n",
+      "15  0.000472 -0.999290   7.240880  \n",
+      "16 -0.000242 -0.416634  10.045930  \n",
+      "17  0.000373 -0.870748   7.743625  \n",
+      "18  0.000371 -0.943818   7.366263  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results_df.head(19))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "id": "dbf7ecb6",
    "metadata": {},
    "outputs": [
@@ -540,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "70510be5",
    "metadata": {},
    "outputs": [
@@ -614,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "3c752bb7",
    "metadata": {},
    "outputs": [
@@ -677,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "id": "7a5feea7",
    "metadata": {},
    "outputs": [
